MCR-3290 Enable PMD rule performance/InefficientEmptyStringCheck